RESOLVED FIXED282106
Large box shadow is not clipped by clip-path() when in scroll container
https://bugs.webkit.org/show_bug.cgi?id=282106
Summary Large box shadow is not clipped by clip-path() when in scroll container
Simon Fraser (smfr)
Reported 2024-10-25 11:09:06 PDT
Created attachment 473047 [details] Test case If you resize the window with the attached test case, the red shadow becomes unclipped by the clip-path.
Attachments
Test case (1.05 KB, text/html)
2024-10-25 11:09 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2024-10-25 11:09:19 PDT
Simon Fraser (smfr)
Comment 2 2024-10-25 11:12:22 PDT
EWS
Comment 3 2024-10-27 08:54:13 PDT
Committed 285742@main (574da2d10dd6): <https://commits.webkit.org/285742@main> Reviewed commits have been landed. Closing PR #35727 and removing active labels.
Simon Fraser (smfr)
Comment 4 2024-12-11 13:07:57 PST
*** Bug 280961 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.